# strsearch

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/stringsearch/: Definitions.hpp  Search.hpp  SuffixSort.hpp  Utf16Le.hpp
src/stringsearch/: Api.cpp  Api.h  ApiDefinitions.h  ApiFunction.h  DllEntry.cpp  DllEntry.h  Main.cpp  MappingIterator.h  PerformanceTests.cpp  Search.cpp  SuffixSort.cpp  Test.cpp
testfiles/: strings
